Clarification of the term 'vehicle'
Making it explicit that a vehicle can be a ship, a car, a train or a plane

--- a/index.html
+++ b/index.html
@@ -284,7 +284,8 @@ https://example.com/page.html
         </section><!-- Online shopper-->
 	      
 	<section id="vehicleAssemblies"><h3>Vehicle assemblies</h3>
-	<p>Manufactured goods are usually the output of multiple processes carried out by multiple actors. Think of a vehicle with 
+	<p>Manufactured goods are usually the output of multiple processes carried out by multiple actors. Think of a vehicle 
+	(be it a ship, a train, a car or a plane) with 
 	components and assemblies of components from multiple suppliers that are then added to the emerging vehicle as it makes its 
 	way along the production line. During the lifetime of that vehicle, components will be replaced and serviced, and this work 
 	can be carried out by any number of different agents.</p>
