--- a/index.html
+++ b/index.html
@@ -298,6 +298,10 @@ https://example.com/page.html
 	traditional system, is not only a single point of failure but that is immediately out of date as soon as the vehicle goes in 
 	for its first service. A decentralized system allows each component of the vehicle to have its own history, its own credentials 
 	and its own lifecycle, independent of other components and the vehicle – or vehicles – of which it is a part over time.</p>
+	<p>The vehicle itself has its own identifier too. This would allow that particular vehicle to be a reference for the components 
+	and any licensing, insurance, servicing etc. Again, the decentralized nature of DIDs promises <em>subsequent owners</em> control 
+	over the identifier without dependency on any central agency allowing the maintenance record(s) to transition smoothly throughout 
+		the entire lifecycle of the vehicle.</p>
 	</section> <!-- Vehicle assemblies -->
 	      
         <p class="ednote">More short use cases to be added</p>
