Proposed credit method for focal use cases
See the Educational focal use case

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
       dl.feature_definitions dt { font-weight: 400; }
 	    
       .highlight {background-color:yellow}
+	    
+	.focalContributor {font-size:small; font-style:italic}
     </style>
   </head>
   <body>
@@ -870,6 +872,7 @@ https://example.com/page.html
     </section>
     <section id="edu">
       <h3>Life-long, recipient-managed Credentials (education)</h3>
+	    <p class="focalContributor">Contributed by Kim Hamilton-Duffy</p>
       <section id="eduBackground">
         <h4>Background</h4>
         <p>Educational Verifiable Credentials [[VC-DATA-MODEL]] offer benefits over traditional
