--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ https://example.com/page.html
 		be verified.</li>
 	<li>The controller of a decentralized identifier can rotate their cryptographic keys, either to overcome their existing keys 
 		being compromised or the development of superior technology. This does not affect the validity or proveability of any 
-		verificable credentials associated with that identifier.</li>
+		verifiable credentials associated with that identifier.</li>
 	</ul>
 	<p class="shortUcContributor">Contributed by David Chadwick, University of Kent</p>
 	</section><!-- VC ecosystem-->
