--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@ https://example.com/page.html
         </section>
         <section id="dereference">
         <h2>Dereference</h2>
+		asfasdfasfdsadfasf
         <p>Dereferencing a DID uses the material in its DID Document to return a resource. The expectation is that, by default, dereferencing 
 		a DID without a reference to a service endpoint will return the <a>DID Document</a> itself. When a DID is combined with a 
 		<code>service</code> <a href="https://www.w3.org/TR/2019/WD-did-core-20191113/#generic-did-parameter-names">parameter</a> 
