Add a new focal usecase on IoT scenario

--- a/index.html
+++ b/index.html
@@ -1178,6 +1178,58 @@ using <a href="https://github.com/WebOfTrustInfo/rwot6-santabarbara/blob/master/
         </p>
       </section>
     </section>
-      </section>
+    <section id="Cognitive machine (IoT)">
+	<h3>Cognitive machine(IoT)
+	<section id="Cognitive machineBackground">
+	  <h4>Background</h4>
+	  <p>
+	   People give machines an identifier to make the machines recognizable 
+	   for a specific control system. The function of the machine will be written 
+	   in a program way for that control system as well. Two limiting factors hinder
+	   the cross-use of this machine. First, the identifier is not universal, which 
+	   means the identifier is not usable in different systems. Besides, the control 
+	   system is a centralized management, which blocks the communication between machines 
+	   in two different management systems.
+	   
+ 	   Giving machine a universal decentralized identifier (DID) enables the machine to
+	   persistently control the identifier itself without depending on a specific system,
+	   and machines are interoperable identifiable beyond system requirements.
+	  </p>
+	</section>
+	<section id="Cognitive machineDescription">
+	  <h4>Description</h4>
+	  <p>
+	   Chris registered his Mustang with a DID-like decal for residential access control. 
+	   The detectors, which can recognize this decal, are supposed to deliver the signal
+           message and thus open the apartment gate for Chris. Because of the work reasons, 
+	   Chris has to move to another state. He logged-in the DID document of this car by his
+	   mobile phone wallet, and updated the cryptographic material associated with this
+           DID-like decal. When he has arrived in the new state, the digital information of the 
+           car has been renewed in the new apartment control system, and now the detectors can 
+	   distinguish Chris’s car by this updated DID-decal. Chris no longer needs to get his 
+	   car a new decal.	
+		  
+	   After decades, Chris wants to sell this Mustang to a second-hand buyer, Ryan, with 
+	   proving a green title for this car. Ryan can simply scan this DID decal, and trace 
+	   back a driving history of this car, to see if any illegal behavior of this car is recorded.
+	   All in all, selected behaviors of this car can be permanently recorded by permitted monitor
+	   without people’s interaction.
+	  </p>
+	</section>
+	<section id="Cognitive machinieChallenges">
+	  <h4>Challenges</h4>
+	  <p>
+  	   The vehicle control systems should be under a universal decentralized registry 
+	   such that DID-like decals all over the country are acceptable.
+	  </p>
+	</section>
+	<section id="Cognitive machinieDistinctions">
+	  <h4>Distinctions</h4>
+	  <p>
+	   This use case gives an instance for IoT scenario, simulating a communication
+	   between car and detectors.
+	   </p>
+	</section>
+     </section>
   </body>
 </html>
