--- a/index.html
+++ b/index.html
@@ -1179,7 +1179,7 @@ using <a href="https://github.com/WebOfTrustInfo/rwot6-santabarbara/blob/master/
       </section>
     </section>
     <section id="Cognitive machine (IoT)">
-	<h3>Cognitive machine(IoT)
+	<h3>Cognitive machine(IoT)</h3>
 	<section id="Cognitive machineBackground">
 	  <h4>Background</h4>
 	  <p>
