Putting original authors back in

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
           company: "GS1",
           w3cid: 101627
         }],
+	authors: [{
+		name: "Kim Hamilton-Duffy",
+		url: "https://www.okimsrazor.com/"
+	},
+		  {name: "Ryan Grant"},
+		  {name: "Adrian Gropper"}],
         wgPublicList: "public-did-wg",
         wg: "Decentralized Identifier Working Group",
         wgURI: "https://www.w3.org/2019/did-wg/",
