--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
         }],
 	authors: [{
 		name: "Kim Hamilton-Duffy",
-		url: "https://www.okimsrazor.com/"
+		url: "https://www.okimsrazor.com/",
+		w3cid: 99918
 	},
-		  {name: "Ryan Grant"},
-		  {name: "Adrian Gropper"}],
+		  {name: "Ryan Grant", w3cid: 101398},
+		  {name: "Adrian Gropper", w3cid: 91611}],
         wgPublicList: "public-did-wg",
         wg: "Decentralized Identifier Working Group",
         wgURI: "https://www.w3.org/2019/did-wg/",
