--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ https://example.com/page.html
 	<li>Terms of use or other policy constraints that might apply to issued VCs.</li>
 	<li>A published list of the public keys used to sign credentials becomes useful in a chain of trust if that list can itself 
 		be verified.</li>
-	<li>The controller of a decentralized identifier can rotate their cryptographic keys, either to overcome their existing keys 
+	<li>The controller of a decentralized identifier can rotate (update) their cryptographic keys, either to overcome their existing keys 
 		being compromised or the development of superior technology. This does not affect the validity or proveability of any 
 		verifiable credentials associated with that identifier.</li>
 	</ul>
