Remove CRUD from Create action
And correct a typo. Sentence now reads "In this scenario, the process will need access to any registry, ideally a decentralized system, and like the rest of the DID actions, it should be possible to create the DID without interaction with any particular authority."

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ https://example.com/page.html
 		resolve to a  DID Document. The DID Document may be dynamically and deterministically generated through resolution or 
 		it may be explicitly constructed as a  stand-alone resource and either stored or referenced in the registry. 
 		In this scenario, the process will need access to any registry, ideally a decentralized system, and like the 
-		rest of the DID CRUD actions, it shold be possible to create the DID without interaction with any particular authority.</p>
+		rest of the DID actions, it should be possible to create the DID without interaction with any particular authority.</p>
         </section>
         <section id="present">
             <h2>Present</h2>
