Changes in presentation of feature/benefit section
New sentence added to end of intro pointing to features and benefits section as a place for further features on top of basic 4 provided in intro and abstract.

Explanation of terms in the grid now within the same section as the grid - they go together.

And all non-breaking spaces removed from tables - they're not necessary and smack of old-skool tables for layout.

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@ https://example.com/page.html
         <li><strong>resolvable</strong>: it should be possible to discover 
         metadata about the identifier.</li>
     </ol>
+	    <p>Further desired features and their benefits are <a href="#featureBenefitGrid">provided in a later section</a>.</p>
   <section id="existingWork">
     <h3>Existing Work</h3>
     <p>The use cases and requirements set out below have not been created <i>a 
@@ -485,7 +486,7 @@ https://example.com/page.html
         </section>
     </section>
     <section id="featureBenefitGrid">
-	<h2>Feature/Benefit Grid</h2>
+	<h2>Features and Benefits</h2>
 		<p>In collecting and evaluating potential use cases, we have 
 		identified fifteen (15) key features of DIDs 
 		that provide benefits in the areas of anti-censorship, anti-exploitation,
@@ -505,101 +506,101 @@ https://example.com/page.html
     <tr>
         <th scope="row"> <a href="#f1">1. Inter-jurisdictional</a></th>
       <td class="a-censor">X</td>
-      <td class="a-exploit">&nbsp;</td>
-      <td class="ease">&nbsp;</td>
-      <td class="privacy">&nbsp;</td>
+      <td class="a-exploit"></td>
+      <td class="ease"></td>
+      <td class="privacy"></td>
       <td class="sustainability">X</td>
     </tr>
     <tr>
         <th scope="row"><a href="#f2">2. Can't be administratively denied</a></th>
 	  <td class="a-censor">X</td>
-      <td class="a-exploit">&nbsp;</td>
-      <td class="ease">&nbsp;</td>
-      <td class="privacy">&nbsp;</td>
-      <td class="sustainability">&nbsp;</td>
+      <td class="a-exploit"></td>
+      <td class="ease"></td>
+      <td class="privacy"></td>
+      <td class="sustainability"></td>
     </tr>
     <tr>
         <th scope="row"><a href="#f3">3. Minimized rents</a></th>
-	  <td class="a-censor">&nbsp;</td>
+	  <td class="a-censor"></td>
       <td class="a-exploit">X</td>
-      <td class="ease">&nbsp;</td>
-      <td class="privacy">&nbsp;</td>
+      <td class="ease"></td>
+      <td class="privacy"></td>
       <td class="sustainability">X</td>
     </tr>
     <tr>
         <th scope="row"><a href="#f4">4. No vendor lock in</a></th>
-	  <td class="a-censor">&nbsp;</td>
+	  <td class="a-censor"></td>
       <td class="a-exploit">X</td>
-      <td class="ease">&nbsp;</td>
-      <td class="privacy">&nbsp;</td>
+      <td class="ease"></td>
+      <td class="privacy"></td>
       <td class="sustainability">X</td>
     </tr>
     <tr>
         <th scope="row"><a href="#f5">5. Self-issued, self-managed</a></th>
 	  <td class="a-censor">X</td>
       <td class="a-exploit">X</td>
-      <td class="ease">&nbsp;</td>
+      <td class="ease"></td>
       <td class="privacy">X</td>
-      <td class="sustainability">&nbsp;</td>
+      <td class="sustainability"></td>
     </tr>
     <tr>
         <th scope="row"><a href="#f6">6. Streamlined rotation</a></th>
- 	  <td class="a-censor">&nbsp;</td>
-      <td class="a-exploit">&nbsp;</td>
+ 	  <td class="a-censor"></td>
+      <td class="a-exploit"></td>
       <td class="ease">X</td>
-      <td class="privacy">&nbsp;</td>
-      <td class="sustainability">&nbsp;</td>
+      <td class="privacy"></td>
+      <td class="sustainability"></td>
     </tr>
     <tr>
         <th scope="row"><a href="#f7">7. No phone home</a></th>
- 	  <td class="a-censor">&nbsp;</td>
-      <td class="a-exploit">&nbsp;</td>
-      <td class="ease">&nbsp;</td>
+ 	  <td class="a-censor"></td>
+      <td class="a-exploit"></td>
+      <td class="ease"></td>
       <td class="privacy">X</td>
-      <td class="sustainability">&nbsp;</td>
+      <td class="sustainability"></td>
     </tr>
     <tr>
         <th scope="row"><a href="#f8">8. No surveillance capitalism</a></th>
- 	  <td class="a-censor">&nbsp;</td>
+ 	  <td class="a-censor"></td>
       <td class="a-exploit">X</td>
-      <td class="ease">&nbsp;</td>
+      <td class="ease"></td>
       <td class="privacy">X</td>
       <td class="sustainability">X</td>
 
     </tr>
     <tr>
         <th scope="row"><a href="#f9">9. Cryptographic future proof</a></th>
- 	  <td class="a-censor">&nbsp;</td>
-      <td class="a-exploit">&nbsp;</td>
-      <td class="ease">&nbsp;</td>
-      <td class="privacy">&nbsp;</td>
+ 	  <td class="a-censor"></td>
+      <td class="a-exploit"></td>
+      <td class="ease"></td>
+      <td class="privacy"></td>
       <td class="sustainability">X</td>
 
     </tr>
     <tr>
         <th scope="row"><a href="#f10">10. Survives issuing organization mortality</a></th>
- 	  <td class="a-censor">&nbsp;</td>
-      <td class="a-exploit">&nbsp;</td>
+ 	  <td class="a-censor"></td>
+      <td class="a-exploit"></td>
       <td class="ease">X</td>
-      <td class="privacy">&nbsp;</td>
+      <td class="privacy"></td>
       <td class="sustainability">X</td>
 
     </tr>
     <tr>
         <th scope="row"><a href="#f11">11. Survives deployment end-of-life</a></th>
- 	  <td class="a-censor">&nbsp;</td>
-      <td class="a-exploit">&nbsp;</td>
-      <td class="ease">&nbsp;</td>
-      <td class="privacy">&nbsp;</td>
+ 	  <td class="a-censor"></td>
+      <td class="a-exploit"></td>
+      <td class="ease"></td>
+      <td class="privacy"></td>
       <td class="sustainability">X</td>
 
     </tr>
     <tr>
         <th scope="row"><a href="#f12">12. Survives relationship with service provider</a></th>
- 	  <td class="a-censor">&nbsp;</td>
-      <td class="a-exploit">&nbsp;</td>
+ 	  <td class="a-censor"></td>
+      <td class="a-exploit"></td>
       <td class="ease">X</td>
-      <td class="privacy">&nbsp;</td>
+      <td class="privacy"></td>
       <td class="sustainability">X</td>
 
     </tr>
@@ -607,17 +608,17 @@ https://example.com/page.html
         <th scope="row"><a href="#f13">13. Cryptographic authentication and communication</a></th>
  	  <td class="a-censor">X</td>
       <td class="a-exploit">X</td>
-      <td class="ease">&nbsp;</td>
+      <td class="ease"></td>
       <td class="privacy">X</td>
-      <td class="sustainability">&nbsp;</td>
+      <td class="sustainability"></td>
 
     </tr>
     <tr>
         <th scope="row"><a href="#f14">14. Service Discovery</a></th>
- 	  <td class="a-censor">&nbsp;</td>
-      <td class="a-exploit">&nbsp;</td>
+ 	  <td class="a-censor"></td>
+      <td class="a-exploit"></td>
       <td class="ease">X</td>
-      <td class="privacy">&nbsp;</td>
+      <td class="privacy"></td>
       <td class="sustainability">X</td>
 
     </tr>
@@ -625,15 +626,15 @@ https://example.com/page.html
         <th scope="row"><a href="#f15">15. Registry agnostic</a></th>
  	  <td class="a-censor">X</td>
       <td class="a-exploit">X</td>
-      <td class="ease">&nbsp;</td>
+      <td class="ease"></td>
       <td class="privacy">X</td>
       <td class="sustainability">X</td>
     </tr>
   </tbody>
 </table>
-  </section>
+  <!--</section>
   <section id="requiredFeatures">
-  <h2>Required Features</h2>
+  <h2>Required Features</h2> -->
 	  <dl id="feature_definitions">
   <dt id="f1">1. Inter-jurisdictional</dt>
 	<dd>Inter-jurisdictional identifiers do not depend on the legal jurisdiction 
@@ -710,8 +711,7 @@ https://example.com/page.html
     <section id="featureCoverage">
 	<h2>Feature Coverage</h2>
 		<p>Not all use cases illustrate each feature, and not all DID methods
-		  support all features. However, we are gathering 
-		  use cases to make sure all key features are clearly described. The
+		  support all features. The
         following chart shows which features are explicitly illustrated in 
         the <a href="#focalUseCases">Focal Use Cases</a>.</p>
   <table class="feature_grid">
@@ -728,14 +728,14 @@ https://example.com/page.html
         <th scope="row"> <a href="#f1">1. Inter-jurisdictional</a></th>
       <td class="corporate">X</td>
       <td class="education">X</td>
-      <td class="prescriptions">&nbsp;</td>
+      <td class="prescriptions"></td>
       <td class="executor">X</td>
-      <td class="sso">&nbsp;</td>
+      <td class="sso"></td>
     </tr>
     <tr>
       <th scope="row"><a href="#f2">2. Can't be administratively denied</a></th>
       <td class="corporate">X</td>
-      <td class="education">&nbsp;</td>
+      <td class="education"></td>
       <td class="prescriptions">X</td>
       <td class="executor">X</td>
       <td class="sso">X</td>
@@ -743,11 +743,11 @@ https://example.com/page.html
     </tr>
     <tr>
         <th scope="row"><a href="#f3">3. Minimized rents</a></th>
-      <td class="corporate">&nbsp;</td>
-      <td class="education">&nbsp;</td>
+      <td class="corporate"></td>
+      <td class="education"></td>
       <td class="prescriptions">X</td>
-      <td class="executor">&nbsp;</td>
-      <td class="sso">&nbsp;</td>
+      <td class="executor"></td>
+      <td class="sso"></td>
 
     </tr>
     <tr>
@@ -756,7 +756,7 @@ https://example.com/page.html
       <td class="education">X</td>
       <td class="prescriptions">X</td>
       <td class="executor">X</td>
-      <td class="sso">&nbsp;</td>
+      <td class="sso"></td>
 
     </tr>
     <tr>
@@ -765,70 +765,70 @@ https://example.com/page.html
       <td class="education">X</td>
       <td class="prescriptions">X</td>
       <td class="executor">X</td>
-      <td class="sso">&nbsp;</td>
+      <td class="sso"></td>
 
     </tr>
     <tr>
       <th scope="row"><a href="#f6">6. Streamlined rotation</a></th>
-      <td class="corporate">&nbsp;</td>
+      <td class="corporate"></td>
       <td class="education">X</td>
-      <td class="prescriptions">&nbsp;</td>
+      <td class="prescriptions"></td>
       <td class="executor">X</td>
-      <td class="sso">&nbsp;</td>
+      <td class="sso"></td>
 
     </tr>
     <tr>
         <th scope="row"><a href="#f7">7. No phone home</a></th>
-      <td class="corporate">&nbsp;</td>
+      <td class="corporate"></td>
       <td class="education">X</td>
       <td class="prescriptions">X</td>
-      <td class="executor">&nbsp;</td>
-      <td class="sso">&nbsp;</td>
+      <td class="executor"></td>
+      <td class="sso"></td>
 
     </tr>
     <tr>
         <th scope="row"><a href="#f8">8. No surveillance capitalism</a></th>
-      <td class="corporate">&nbsp;</td>
-      <td class="education">&nbsp;</td>
+      <td class="corporate"></td>
+      <td class="education"></td>
       <td class="prescriptions">X</td>
-      <td class="executor">&nbsp;</td>
-      <td class="sso">&nbsp;</td>
+      <td class="executor"></td>
+      <td class="sso"></td>
 
     </tr>
     <tr>
         <th scope="row"><a href="#f9">9. Cryptographic future proof</a></th>
       <td class="corporate">X</td>
       <td class="education">X</td>
-      <td class="prescriptions">&nbsp;</td>
-      <td class="executor">&nbsp;</td>
+      <td class="prescriptions"></td>
+      <td class="executor"></td>
       <td class="sso">X</td>
 
     </tr>
     <tr>
         <th scope="row"><a href="#f10">10. Survives issuing organization mortality</a></th>
-      <td class="corporate">&nbsp;</td>
+      <td class="corporate"></td>
       <td class="education">X</td>
-      <td class="prescriptions">&nbsp;</td>
-      <td class="executor">&nbsp;</td>
-      <td class="sso">&nbsp;</td>
+      <td class="prescriptions"></td>
+      <td class="executor"></td>
+      <td class="sso"></td>
 
     </tr>
     <tr>
         <th scope="row"><a href="#f11">11. Survives deployment end-of-life</a></th>
-      <td class="corporate">&nbsp;</td>
+      <td class="corporate"></td>
       <td class="education">X</td>
-      <td class="prescriptions">&nbsp;</td>
-      <td class="executor">&nbsp;</td>
-      <td class="sso">&nbsp;</td>
+      <td class="prescriptions"></td>
+      <td class="executor"></td>
+      <td class="sso"></td>
 
     </tr>
     <tr>
         <th scope="row"><a href="#f12">12. Survives relationship with service provider</a></th>
       <td class="corporate">X</td>
       <td class="education">X</td>
-      <td class="prescriptions">&nbsp;</td>
-      <td class="executor">&nbsp;</td>
-      <td class="sso">&nbsp;</td>
+      <td class="prescriptions"></td>
+      <td class="executor"></td>
+      <td class="sso"></td>
 
     </tr>
     <tr>
@@ -842,21 +842,21 @@ https://example.com/page.html
     </tr>
     <tr>
         <th scope="row"><a href="#f14">14. Service Discovery</a></th>
-      <td class="corporate">&nbsp;</td>
-      <td class="education">&nbsp;</td>
-      <td class="prescriptions">&nbsp;</td>
-      <td class="executor">&nbsp;</td>
-      <td class="sso">&nbsp;</td>
+      <td class="corporate"></td>
+      <td class="education"></td>
+      <td class="prescriptions"></td>
+      <td class="executor"></td>
+      <td class="sso"></td>
 
 
     </tr>
     <tr>
         <th scope="row"><a href="#f15">15. Registry agnostic</a></th>
-      <td class="corporate">&nbsp;</td>
-      <td class="education">&nbsp;</td>
-      <td class="prescriptions">&nbsp;</td>
-      <td class="executor">&nbsp;</td>
-      <td class="sso">&nbsp;</td>
+      <td class="corporate"></td>
+      <td class="education"></td>
+      <td class="prescriptions"></td>
+      <td class="executor"></td>
+      <td class="sso"></td>
 
     </tr>
   </tbody>
