Missing apostrophe on possessive noun

--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@ https://example.com/page.html
           machine-readable digitally signed data. Digitally signed documentation
           is collected at each stage of the manufacturing, packaging, and
           shipping process. This documentation is then submitted to Customs
-          upon the products entry into the country where all digital signatures
+          upon the product's entry into the country where all digital signatures
           are verified on the documentation. Some aspects of the signed
           documentation, such as firmware hashes and checksums, are then used
           by Customs and downstream customers to verify that the products have
