Spelling out 2FA

--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,7 @@ https://example.com/page.html
 information relevant to the WG's work.</p>
         <p>Use a DID as a single-sign-on to a Web site, for example between
           a Web page and a Web browser with a mobile identity app. When desirable, 
-          the relationship can add a shared secret for 2FA.</p>
+          the relationship can add a shared secret for two-factor authentication (2FA).</p>
         <p>Detailed aspects of this use case are out of scope for the Decentralized
         Identifier Working Group but they have been explored elsewhere [[DID-Auth]].
 
