--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         wg: "Decentralized Identifier Working Group",
         wgURI: "https://www.w3.org/2019/did-wg/",
         wgPatentURI: "https://www.w3.org/2004/01/pp-impl/117488/status",
+	wgId: 117488,
         maxTocLevel: 4,
         inlineCSS: true,
 	noRecTrack: true,
