Edits to corporate ID background. Will fix #19
Assertion that self-issued IDs *will* make transactions more efficient reduced to *might*. The following sections give an explanation f how that could be true, so we're not making an untestable assertion. Also added GS1's organization IDs, GLNs, (because I can).

--- a/index.html
+++ b/index.html
@@ -875,14 +875,16 @@ https://example.com/page.html
           There are many types of identifiers that corporations use today
           including tax identification numbers (e.g. 238-42-3893), Legal
           Entity Identifiers (e.g. 5493000IBP32UQZ0KL24), Data Universal
-          Numbering System identifiers (aka. DUNS Number) (e.g. 150483782),
+          Numbering System identifiers (a.k.a. DUNS Number, e.g. 150483782),
+	  Global Location Number (e.g. 9501101020016),
           and many more that communicate the unique identity of an organization.
           None of these numbers enable an organization to self-issue an
           identifier or to use the number to cryptographically authenticate or
-          digitally sign agreements. A great number of business to business
-          and business to customer transactions could be executed more quickly
-          and with greater assurance of the validity of the transaction if a
-          mechanism to self-issue cryptographic identifiers were created.
+          digitally sign agreements. Business to business 
+          and business to customer transactions might be conducted with more 
+	  efficiency and with greater assurance of the validity of the 
+	  transaction if a mechanism to self-issue cryptographic identifiers 
+	  were created.
         </p>
       </section>
       <section id="didEnterpriseDescrption">
