More about supply chain partner IDs. Will fix #20
Addresses issue that supply chain partners' identities need to be proved as well.

--- a/index.html
+++ b/index.html
@@ -892,9 +892,9 @@ https://example.com/page.html
         <p>
           A North American government would like to ensure that the supply
           chain that feeds electronic products into the country is secure. As
-          a result, a new method of submitting digital documentation to Customs
-          is enabled that requires that all documentation is provided as
-          machine-readable digitally signed data. Digitally signed documentation
+          a result, a new method of submitting digital documentation to Customs is enabled that requires that all documentation is 
+	  provided as machine-readable digitally signed data with proof of provenance from supply chain partners whose identities 
+	  are themselves known to a high degree of certainty. Digitally signed documentation
           is collected at each stage of the manufacturing, packaging, and
           shipping process. This documentation is then submitted to Customs
           upon the product's entry into the country where all digital signatures
