Which Oxford? Will fix #21
The text in the description of the Life-long, recipient-managed Credentials (education) focal use case is full of jargon and assumptions about the solution. However, we have stated (in section 1.1) that we're not starting from scratch so this is, just about, tolerable. However, I have added a hyperlink to the University of Oxford and made it clear that it's important that it's that specific university when the credential is verified 10 years later.

Meanwhile, I can't help but chortle at two Americans discussing the likelihood of the University of Oxford still existing in 50 years' time. America ca. 1776, Uni Oxford ca. 1096.

--- a/index.html
+++ b/index.html
@@ -991,8 +991,8 @@ https://example.com/page.html
       </section>
       <section id="eduDescription">
         <h4>Description</h4>
-        <p>When Sally earned her master&rsquo;s degree at  Oxford, she received a 
-			digital diploma that contained a decentralized identifier she provided. 
+	      <p>When Sally earned her master&rsquo;s degree at the <a href="http://www.ox.ac.uk/">University of Oxford</a>, 
+		      she received a digital diploma that contained a decentralized identifier she provided. 
 			Over time, she updates the cryptographic material associated with that 
 			DID to use her latest hardware wallet, with biometric protections and a 
 			quantum resistant algorithm. A decade after  graduation, she applies for 
@@ -1003,7 +1003,7 @@ https://example.com/page.html
 			In addition to the fact that her name matches the name on the diploma, 
 			the cryptographic authentication provides a robust verification of her 
 			claim, allowing the employer to rely on Sally&rsquo;s assertion that she 
-			earned a master&rsquo;s degree from Oxford. </p>
+			earned a master&rsquo;s degree from the stated university without having to contact the university directly.</p>
       </section>
       <section id="eduChallenges">
         <h4>Challenges</h4>
