Added sentence about circular economy Will Fix #55
I added a sentence to #vehicleAssemblies to cover recycling information.

--- a/index.html
+++ b/index.html
@@ -310,7 +310,9 @@ https://example.com/page.html
 	is no requirement for the overall vehicle manufacturer to maintain an aggregated database  concerning a vehicle that, in a 
 	traditional system, is not only a single point of failure but that is immediately out of date as soon as the vehicle goes in 
 	for its first service. A decentralized system allows each component of the vehicle to have its own history, its own credentials 
-	and its own lifecycle, independent of other components and the vehicle – or vehicles – of which it is a part over time.</p>
+	and its own lifecycle, independent of other components and the vehicle – or vehicles – of which it is a part over time. At the end of its life, 
+	the identifier may continue to be useful as a reference point for recycling and safe disposal information, even if the original
+	manufacturer is no longer in business.</p>
 	<p>The vehicle itself has its own identifier too. This would allow that particular vehicle to be a reference for the components 
 	and any licensing, insurance, servicing etc. Again, the decentralized nature of DIDs promises <em>subsequent owners</em> control 
 	over the identifier without dependency on any central agency allowing the maintenance record(s) to transition smoothly throughout 
