Missing opening &lt;

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ https://example.com/page.html
 	</section><!-- Opted-in information -->
 
 	<section id="supplyChain"><h3>Anonymity within a supply chain</h3>
-	p>Modern supply chains are highly complex, typically involving multiple companies taking ownership and/or custody of shipments from the point of
+	<p>Modern supply chains are highly complex, typically involving multiple companies taking ownership and/or custody of shipments from the point of
 	origin through to the final destination, be that a retailer or end consumer. Furthermore, since most mass-produced products are made to stock rather than 
 	bespoke for a specific customer, the manufacturer typically does not know which final  retailer or retail store will receive each specific product instance; 
 	the individual path through the supply chain network is not predefined by the manufacturer but instead emerges over time as a set of intermediate distributors 
