Trivial syntax fix on mention of ISBNs

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ https://example.com/page.html
     DOI organization and the suffix by the registrant.</li>
   <li>Global Trade Item Numbers (GTINs) seen on many of the world's barcodes 
       are managed in a similar way, as are Legal Entity Identifiers, 
-      <abbr title="International Standard Book Number">ISBN</a>s and more.</li>
+      <abbr title="International Standard Book Number">ISBN</abbr>s and more.</li>
   </ul>
   <p>In all these cases, ultimately, there is a central authority on which the 
    identifier system depends. Those central authorities go to significant 
