added missing parentheses

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ https://example.com/page.html
       registered with US CBP. 
       For her manufacturers, Jodie cryptographically delegates the digital license to 
       individual manufacturers using the DID (which is both the subject of the license
-      <em>and</em> known to US CBP. Those manufacturers are responsible for getting 
+      <em>and</em> known to US CBP). Those manufacturers are responsible for getting 
       the product to the port of Los Angeles. They, in turn, cryptographically delegate 
       their licenses to logistics firms to actually move the product from their facility 
       to Los Angeles, while maintaining cryptographic verifiability of both the 
