removed redundant "in"

--- a/index.html
+++ b/index.html
@@ -454,9 +454,8 @@ https://example.com/page.html
       their licenses to logistics firms to actually move the product from their facility 
       to Los Angeles, while maintaining cryptographic verifiability of both the 
       original license, and the chain of delegations.</p>
-    <p>When her products reach 
-      in to the United States, CBP can automatically review the digital manifest
-      filed for entry and each of the delegations to verify that this given 
+    <p>When her products reach  the United States, CBP can automatically review the 
+      digital manifest filed for entry and each of the delegations to verify that this given 
       batch of products are, in fact, officially licensed Lima Bean Baby products. 
       </p>
       <p>This digitally verifiable provenance of 
