--- a/index.html
+++ b/index.html
@@ -992,7 +992,8 @@ https://example.com/page.html
       <section id="eduDescription">
         <h4>Description</h4>
 	      <p>When Sally earned her master&rsquo;s degree at the <a href="http://www.ox.ac.uk/">University of Oxford</a>, 
-		      she received a digital diploma that contained a decentralized identifier she provided. 
+		      she received a digital diploma that contained a decentralized identifier she provided. This digital diploma is signed using a decentralized 
+		      identifier which has been published and verified by the University of Oxford.
 			Over time, she updates the cryptographic material associated with that 
 			DID to use her latest hardware wallet, with biometric protections and a 
 			quantum resistant algorithm. A decade after  graduation, she applies for 
