--- a/index.html
+++ b/index.html
@@ -382,7 +382,8 @@ https://example.com/page.html
 	<p>Before becoming a full time journalist, Sahar worked many odd jobs and uncredited gigs in the publishing and movie 
 	industries: she was a ghostwriter, a scriptfixer, various kinds of editor, a translator, and more. Some of these gigs 
 	still pay her residuals years later in the form of tiny micropayments. When these now-classic works are reprinted or 
-	syndicated, the payments are automatically sent out, without anyone involved thinking much about who exactly the contract 
+	syndicated, the payments are automatically sent using information associated with Sahar's DID without anyone involved thinking 
+	much about who exactly the contract 
 	refers to as “anonymous ghostwriter X” or “translator of appendix C”. Using a DID as her identifier, rather than her name, allows 
 	Sahar to retain anonimity but provide a means for others to pay the right person.</p>
 	<p class="shortUcContributor">Contributed by Juan Caballero</p>
