--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         agency;</li>
         <li><strong>persistent</strong>: the identifier should be inherently 
         persistent, not requiring the continued operation of an underling organization;</li>
-        <li><strong>crytopgraphically verifiable</strong>: it should be possible 
+        <li><strong>cryptographically verifiable</strong>: it should be possible 
         to prove control of the identifier cryptographically;</li>
         <li><strong>resolvable</strong>: it should be possible to discover 
         metadata about the identifier.</li>
@@ -126,7 +126,7 @@
       times. Globally unique ID schemes typically rely on a central authority 
       controlling a 'root' space that is then delegated to local organizations 
       who in turn delegate to further organizations who eventually add the final 
-      string to complete the identifer. Even if we restrict ourseleves to online 
+      string to complete the identifier. Even if we restrict ourselves to online 
       identifiers, there are many examples of this.</p><ul>
   <li>IANA controls the root namespace of the Internet's Domain Name System; 
       registrars operate the top level domains and then license specific domain 
@@ -169,7 +169,7 @@ https://example.com/page.html
         agency;</li>
         <li><strong>persistent</strong>: the identifier should be inherently 
         persistent, not requiring the continued operation of an underling organization;</li>
-        <li><strong>crytopgraphically verifiable</strong>: it should be possible 
+        <li><strong>cryptographically verifiable</strong>: it should be possible 
         to prove control of the identifier cryptographically;</li>
         <li><strong>resolvable</strong>: it should be possible to discover 
         metadata about the identifier.</li>
@@ -354,7 +354,7 @@ https://example.com/page.html
 	<li>A published list of the public keys used to sign credentials becomes useful in a chain of trust if that list can itself 
 		be verified.</li>
 	<li>The controller of a decentralized identifier can rotate (update) their cryptographic keys, either to overcome their existing keys 
-		being compromised or the development of superior technology. This does not affect the validity or proveability of any 
+		being compromised or the development of superior technology. This does not affect the validity or provability of any 
 		verifiable credentials associated with that identifier.</li>
 	</ul>
 	<p class="shortUcContributor">Contributed by David Chadwick, University of Kent</p>
@@ -387,7 +387,7 @@ https://example.com/page.html
 	syndicated, the payments are automatically sent using information associated with Sahar's DID without anyone involved thinking 
 	much about who exactly the contract 
 	refers to as “anonymous ghostwriter X” or “translator of appendix C”. Using a DID as her identifier, rather than her name, allows 
-	Sahar to retain anonimity but provide a means for others to pay the right person.</p>
+	Sahar to retain anonymity but provide a means for others to pay the right person.</p>
 	<p class="shortUcContributor">Contributed by Juan Caballero</p>
   </section><!-- Ghost Writer-->
 
@@ -1069,7 +1069,7 @@ https://example.com/page.html
     		<li>With the public key embedded in the digitally signed credential, 
 				it is literally impossible to update the signing key; a recipient 
 				must  contact the issuer and request re-issuing with a new 
-				identifer. If the issuer is not reachable, or is unwilling 
+				identifier. If the issuer is not reachable, or is unwilling 
 				or unable to issue a new credential, the recipient cannot 
 				update the cryptographic material.</li>
 			<li>If the credential relies on a centralized key registry or 
