--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ https://example.com/page.html
 	<p>Such an identifier could be shared across multiple platforms that would be able to use it to provide a more customized 
 	service, but without gaining any PII and therefore without being able to correlate with other services that did depend the 
 	individual’s identity, such as their health records. A single individual would be well able to maintain multiple online 
-	personas in this way and thereby have good control over what they did and didn’t share with different services.</p>
+	personas in this way and thereby have good control over what they did and didn't share with different services.</p>
 	<p class="shortUcContributor">Suggested by Airgrid</p>
 	</section><!-- Opted-in information -->
 
