--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ https://example.com/page.html
 		<p>In collecting and evaluating potential use cases, we have 
 		identified fifteen (15) key features of DIDs 
 		that provide benefits in the areas of anti-censorship, anti-exploitation,
-		ease of use, privacy, and sustainability.<p>
+		ease of use, privacy, and sustainability.</p>
 		<p>The features and their associated benefits can be seen in the following 
         grid. A brief definition of each feature follows.</p>
   <table id="feature_benefit_grid" class="feature_grid">
