Adding class="remove"

--- a/index.html
+++ b/index.html
@@ -1344,7 +1344,7 @@ using <a href="https://github.com/WebOfTrustInfo/rwot6-santabarbara/blob/master/
       </section>
     </section>
       </section>
-<script>
+<script class="remove">
 
 // Script to generate matrix of requirements and use cases
 // First we'll need a couple of data objects to draw from
