Avoiding double run?
This is basically a guess... it may not work. But I've added code to the very end of my script at the bottom of the page so the UC matrix is written *after* ReSpec has finished - I hope.

--- a/index.html
+++ b/index.html
@@ -1420,7 +1420,13 @@ function createReqSummary(targetElement) {
   document.getElementById(targetElement).appendChild(dl);
 }
 
-createReqSummary('ucMatrix');
+// Wait until resources have loaded, including ReSpec
+  document.addEventListener("load", function () {
+    document.respecIsReady.then(createReqSummary('ucMatrix')
+    });
+  });
+	
+// createReqSummary('ucMatrix');
 
 </script>
 
