Matrix, not Summary

--- a/index.html
+++ b/index.html
@@ -1420,7 +1420,7 @@ function createReqSummary(targetElement) {
   document.getElementById(targetElement).appendChild(dl);
 }
 if (document.getElementById('requirementsCrossRef') !== 'null') { // Hopefully prevents this code running twice
-  createReqSummary('ucSummary');
+  createReqSummary('ucMatrix');
 }
 //createReqSummary('ucMatrix');
 
