--- a/index.html
+++ b/index.html
@@ -1077,6 +1077,7 @@ information relevant to the WG's work.</p>
 // The reqs are mapped to use cases via the data and functions in this section.
 
 let reqObjectList = [];
+let ucObjectList = [];
 let featureObjectList = [];
 
 function ReqObject(id,name,def,feature) {
@@ -1126,7 +1127,7 @@ featureObjectList.push(new featureObject("easeOfUse","Ease of use"));
 featureObjectList.push(new featureObject("privacy","Privacy"));
 featureObjectList.push(new featureObject("sustainability","Sustainability"));
 
-let ucObjectList = createUcObjectList();
+if (ucObjectList.length === 0) {ucObjectList = createUcObjectList()}
 
 function createUcObjectList() {
   let opList = [];
@@ -1134,7 +1135,6 @@ function createUcObjectList() {
   for (let i = 0; i < reqListParas.length; i++) {
     let e = reqListParas[i];
     let usecase = e.parentNode.id;   // This is the id of the UC that has these reqs
-
     opList.push(new ucObject(usecase, document.querySelector('#' + usecase + ' h3').textContent)); // build the use case object
     if (e.hasChildNodes()) {
       let children = e.childNodes;
@@ -1157,7 +1157,6 @@ function createUcObjectList() {
 function createReqSummaryDl(targetElement) {
   let dl = document.createElement('dl');  // Creates a dl for easier display on mobile
   dl.id = "requirementsCrossRefDL";
-
   for (let req = 0; req < reqObjectList.length; req++) {  // Going through all the requirements
     let dt = document.createElement('dt');
     dt.id = reqObjectList[req].id + 'dt';
@@ -1212,7 +1211,6 @@ function createReqSummaryTable(targetElement) {
     th.className = 'noBold';
     th.appendChild(document.createTextNode(ucObjectList[u].name));
     tr.appendChild(th);
-    // look for ucObjectList[u].id in
     for (let r = 0; r < reqObjectList.length; r++) {  // The list of requirements
       let td = document.createElement('td');
       if (reqObjectList[r].uc.includes(ucObjectList[u].id)) {
@@ -1288,8 +1286,7 @@ function createRequirementsDefList(targetElement) {
 //if (document.getElementById('requirementsCrossRef') !== 'null') {createReqSummaryDl('ucSummary')}
 if (document.getElementById('requirementsCrossRefTable') !== 'null'){createReqSummaryTable('requirements')}
 if (document.getElementById('requirementsDefinitions') !== 'null'){createRequirementsDefList('requirements')}
-if (document.getElementById('featureBenefitGridTable') !== 'null'){createFeatureBenefitGrid('featureBenefitGrid')
-
+if (document.getElementById('featureBenefitGridTable') !== 'null'){createFeatureBenefitGrid('featureBenefitGrid')}
 </script>
 	  
   </body>
