Trying with class=remove
Hoping this means the script only runs once

--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@ information relevant to the WG's work.</p>
 
     </section> <!-- end sso -->
       </section>
-<script>
+<script class="remove">
 // The reqs are mapped to use cases via the data and functions in this section.
 
 let reqObjectList = [];
