Slight change in feature benefit grid intro
Having finally got the script to work as desired, I can think about the text...

--- a/index.html
+++ b/index.html
@@ -568,12 +568,16 @@ https://example.com/page.html
   </section> <!-- End short use cases -->
 
 <section id="requirements"><h2>Requirements</h2>
-<p>The short use cases in the previous section, and the focal use cases towards the end of the document, point to a set of requirements that Decentralized Identifiers must fulfil. The use cases and their requirements are tabulated below, followed by a definition of each requirement.</p>
+<p>The short use cases in the previous section, and the focal use cases towards the end of the document, 
+	point to a set of requirements that Decentralized Identifiers must fulfil. The use cases and their 
+	requirements are tabulated below, followed by a definition of each requirement.</p>
 <!-- table and reqs definitions are inserted automagically here -->
 </section>
 
 <section id="featureBenefitGrid"><h2>Features and Benefits</h2>
-<p>In collecting and evaluating potential use cases and requirements it is posisble to identify the key features of DIDs that provide benefits in the areas of anti-censorship, anti-exploitation, ease of use, privacy, and sustainability. The features and their associated benefits can be seen in the following grid.</p>
+<p>In collecting and evaluating potential use cases and requirements it is posisble to identify the key 
+	features of DIDs that provide benefits in the areas of anti-censorship, anti-exploitation, ease of 
+	use, privacy, and sustainability. The requirements and their associated benefits can be seen in the following grid.</p>
 <!-- grid automagically appears here -->
 </section>
 
