--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ https://example.com/page.html
   <section id="digitalPRC">
     <h3>Digital Permanent Resident Card</h3>
     <p>Sam is a long term immigrant to the United States who just received
-      notice of Permanent Resident status from the United States Customs and
+      notice of Permanent Resident status from the United States Citizenship and
       Immigration Services (USCIS). Along with his notice is directions for
       downloading and using a digital version of his physical card, including
       a one-time activation code. After getting a digital wallet, he visits
